# aws-redshift-elt

./: .gitignore  README.md  dwh_example.cfg  example.cfg  pyproject.toml  redshift_example.cfg
aws_redshift_etl/: create_tables.py  etl.py  sql_queries.py  utils.py
aws_redshift_etl/queries/: create.py  drop.py  ingest.py  transform.py
notebooks/: boto3.ipynb  etl.ipynb
