[tool.poetry]
name = "aws-redshift-etl"
version = "0.0.1"
description = "ETL for sparkify analytics with AWS Redshift"
authors = ["Maximilian Engelhardt <maximilian.engelhardt@ing.com>"]

[tool.poetry.dependencies]
python = ">=3.9.7,<4.0"
boto3 = "^1.20.17"
psycopg2 = "^2.9.2"
ipython-sql = "^0.4.0"
ipykernel = "^6.6.0"

[tool.poetry.dev-dependencies]
pylint = "*"
flake8 = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"